--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Video Page</title>
+  <title>City of Newcastle Pipe Band Music Site</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -42,14 +42,14 @@
   </style>
 </head>
 <body>
-  <h1>My YouTube Videos</h1>
+  <h1>City of Newcastle Pipe Band Music Files</h1>
 
   <div class="video-container">
     <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" allowfullscreen></iframe>
+      <iframe src="https://youtu.be/B47ubyZn2_0" allowfullscreen></iframe>
     </div>
     <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe>
+      <iframe src="https://youtu.be/B47ubyZn2_0" allowfullscreen></iframe>
     </div>
     <!-- Add more videos as needed -->
   </div>
