--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
   <div class="video-container">
     <div class="video-wrapper">
-      <iframe src="https://youtu.be/B47ubyZn2_0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
     </div>
     <div class="video-wrapper">
-      <iframe src="https://youtu.be/B47ubyZn2_0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
     </div>
     <!-- Add more videos as needed -->
   </div>
