--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
   <h1>City of Newcastle Pipe Band Music Files</h1>
 <br>
-  <center>The Hoolit</center>
+  <h2>The Hoolit</h2>
   <div class="video-container">
     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
