--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
   <h1>City of Newcastle Pipe Band Music Files</h1>
 <br>
-  <h1>The Hoolit</h1>
+ <center><h1>The Hoolit</h1></center> 
   <div class="video-container">
     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
