--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
-      background-color: #D3D3D3;
+      background-color: #808080;
     }
 
     h1 {
