--- a/index.html
+++ b/index.html
@@ -52,10 +52,37 @@
     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
     </div>
+
+    <!-- Add more videos as needed -->
+  </div>
+  <br>
+ <center><h1>The Curlew</h1></center> 
+  <div class="video-container">
     <div class="video-wrapper">
       <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
     </div>
-    <!-- Add more videos as needed -->
-  </div>
-</body>
+    <br>
+ <center><h1>The Call to the Gathering</h1></center> 
+  <div class="video-container">
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
+    </div>
+    <br>
+ <center><h1>Callum Campbell of Benbecular</h1></center> 
+  <div class="video-container">
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
+    </div>
+ <br>
+ <center><h1>Ravens Rock</h1></center> 
+  <div class="video-container">
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
+    </div>
+ <br>
+ <center><h1>JK Laing</h1></center> 
+  <div class="video-container">
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
+    </div>  </body>
 </html>
