--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
  <center><h1>Ravens Rock</h1></center> 
   <div class="video-container">
     <div class="video-wrapper">
-      <iframe src="https://youtu.be/gJC-a897T7Q" allowfullscreen></iframe>
+      <iframe src="https://youtu.be/embed/gJC-a897T7Q" allowfullscreen></iframe>
     </div>
  <br>
  <center><h1>JK Laing</h1></center> 
