--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
  <center><h1>Ravens Rock</h1></center> 
   <div class="video-container">
     <div class="video-wrapper">
-      <iframe src="hhttps://youtu.be/gJC-a897T7Q?si=lKEpnh4gUGJy7dgF" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/gJC-a897T7Q?si=lKEpnh4gUGJy7dgF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
  <br>
  <center><h1>JK Laing</h1></center> 
