--- a/index.html
+++ b/index.html
@@ -1,25 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>City of Newcastle Pipe Band Music Site</title>
+    <meta charset="UTF-8">
+    <title>YouTube Video Gallery</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <style>
+        body {
+            margin: 0;
+            padding: 20px;
+            background-color: #111;
+            font-family: Arial, sans-serif;
+            color: #fff;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .video-container {
+            max-width: 900px;
+            margin: 0 auto 40px auto;
+            aspect-ratio: 16 / 9;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-  <h1>City of Newcastle Pipe Band Music Files</h1>
-<br>
-  <hr>
-  <br>
 
- <center><h1>Ravens Rock</h1></center> 
+    <h1>Medley Toon 2026</h1>
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/gJC-a897T7Q?si=lKEpnh4gUGJy7dgF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    
- <br>
- <center><h1>JK Laing</h1></center> 
-  <div class="video-container">
-    <div class="video-wrapper">
-      <iframe src="https://www.youtube.com/embed/B47ubyZn2_0" allowfullscreen></iframe>
-    </div>  </body>
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/hJFrTf4ssQo?si=kdwNnusNAgN1fGz0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       
+    </div>
+
+    <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KvcqQb3aVu8?si=qQjSu4QPgHw8r3qZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+
+    <div class="video-container">
+        <iframe 
+            src="https://www.youtube.com/embed/VIDEO_ID_3"
+            allowfullscreen>
+        </iframe>
+    </div>
+
+</body>
 </html>
