--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>YouTube Video Gallery</title>
+    <title>City of NEwcastle Pipe BAnd - YouTube Video Gallery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
@@ -35,13 +35,15 @@
 </head>
 <body>
 
-    <h1>Medley Toon 2026</h1>
+    <h1>Medley Toon 2026</h1><br><h3>At Tempo</h3> <hr>
+    <br>
+    <h3>The Hoolit</h3>
 
     <div class="video-container">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/hJFrTf4ssQo?si=kdwNnusNAgN1fGz0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
        
     </div>
-
+<br> <h3>Ellis KEllys Delight</h3>
     <div class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/KvcqQb3aVu8?si=qQjSu4QPgHw8r3qZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
