--- a/index.html
+++ b/index.html
@@ -47,13 +47,17 @@
     <div class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/KvcqQb3aVu8?si=qQjSu4QPgHw8r3qZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-
+<br><h3>New Year at Noosa</h3>
     <div class="video-container">
-        <iframe 
-            src="https://www.youtube.com/embed/VIDEO_ID_3"
-            allowfullscreen>
-        </iframe>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/fzVNxOe2BbY?si=aBf8VEY6axm3UmtE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-
+    <br><h3>Call to The Gathering</h3>
+<div class="video-container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/V4Zpf593su8?si=xNd1jC1RJbOfP2M4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+      <br><h3>Callum Campbell</h3>
+<div class="video-container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1rS8EV5-p2Q?si=-Y68T00ucIE5OTy9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div> 
 </body>
 </html>
