--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-
+<center>
     <h1>Medley Toon 2026</h1><br><h3>At Tempo</h3> <hr>
     <br>
     <h3>The Hoolit</h3>
@@ -67,6 +67,6 @@
 <div class="video-container">
    <iframe width="560" height="315" src="https://www.youtube.com/embed/rfAb9iHOevg?si=Erm8Et88I6usGK7Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div> 
-    
+    </center>
 </body>
 </html>
