--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/hJFrTf4ssQo?si=kdwNnusNAgN1fGz0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
        
     </div>
-<br> <h3>Ellis KEllys Delight</h3>
+<br> <h3>Ellis Kellys Delight</h3>
     <div class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/KvcqQb3aVu8?si=qQjSu4QPgHw8r3qZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
