--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <center>
-    <h1>Medley Toon 2026</h1><br><h3>At Tempo</h3> <hr>
+    <h1>Medley Toon 2026</h1><br><h3>At Tempo</h3> <br> <a href="https://cityofnewcastle.github.io/tunes/">Return to Main Menu</a> <br><hr>
     <br>
     <h3>The Hoolit</h3>
 
