--- a/slowmedley.html
+++ b/slowmedley.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>City of NEwcastle Pipe BAnd - YouTube Video Gallery</title>
+    <title>City of Newcastle Pipe Band - YouTube Video Gallery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
