--- a/index.html
+++ b/index.html
@@ -37,36 +37,10 @@
 <center>
     <h1>Medley Toon 2026</h1><br><h3>At Tempo</h3> <br> <a href="https://cityofnewcastle.github.io/tunes/">Return to Main Menu</a> <br><hr>
     <br>
-    <h3>The Hoolit</h3>
+    <a href="https://cityofnewcastle.github.io/tunes/medley2026.html">Medley at Tempo</a> <br><br>
+    <a href="https://cityofnewcastle.github.io/tunes/slowmedley.html">Medley Slowed Down</a> <br>
 
-    <div class="video-container">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/hJFrTf4ssQo?si=kdwNnusNAgN1fGz0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-       
-    </div>
-<br> <h3>Ellis Kellys Delight</h3>
-    <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/KvcqQb3aVu8?si=qQjSu4QPgHw8r3qZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-<br><h3>New Year at Noosa</h3>
-    <div class="video-container">
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/fzVNxOe2BbY?si=aBf8VEY6axm3UmtE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-    <br><h3>Call to The Gathering</h3>
-<div class="video-container">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/V4Zpf593su8?si=xNd1jC1RJbOfP2M4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-      <br><h3>Callum Campbell</h3>
-<div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/1rS8EV5-p2Q?si=-Y68T00ucIE5OTy9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div> 
-        <br><h3>Ravens Rock</h3>
-<div class="video-container">
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/gJC-a897T7Q?si=rlS1qZMCB8TBFVax" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div> 
-   <br><h3>JK Laign</h3>
-<div class="video-container">
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/rfAb9iHOevg?si=Erm8Et88I6usGK7Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div> 
+   
     </center>
 </body>
 </html>
