--- a/index.html
+++ b/index.html
@@ -31,11 +31,27 @@
             border-radius: 10px;
             border: none;
         }
+                a {
+            color: white;
+            text-decoration: none;
+        }
+
+        a:visited {
+            color: white;
+        }
+
+        a:hover {
+            color: white;
+        }
+
+        a:active {
+            color: white;
+        }
     </style>
 </head>
 <body>
 <center>
-    <h1>Medley Toon 2026</h1><br><h3>At Tempo</h3> <br> <a href="https://cityofnewcastle.github.io/tunes/">Return to Main Menu</a> <br><hr>
+    <h1>City of Newcastle Pipe Band</h1><br><h3>Videos of the Band Tunes</h3> <br> <a href="https://cityofnewcastle.github.io/tunes/">Return to Main Menu</a> <br><hr>
     <br>
     <a href="https://cityofnewcastle.github.io/tunes/medley2026.html">Medley at Tempo</a> <br><br>
     <a href="https://cityofnewcastle.github.io/tunes/slowmedley.html">Medley Slowed Down</a> <br>
